--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,23 @@ repositories {
     mavenCentral()
 }
 
-def junitVersion = "5.8.2"
+def allureVersion = "2.17.2",
+        junitVersion = "5.8.2"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        autoconfigure.set(true)
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+}
 
 dependencies {
     testImplementation(
